# rIdle

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COPYRIGHT.md  Cargo.toml  PRIVACY.md  README.md  registry.json
.github/workflows/: release.yml
src/: app.rs  config.rs  doctor.rs  downloader.rs  main.rs  preview.rs  runner.rs  saver_win32.rs  ui.rs  win32.rs
src/app/: keys.rs  mod.rs
src/backend/: mod.rs  preview.rs  sys_info.rs
src/backend/downloader/: mod.rs
src/ui/: widgets.rs
