[package]
name = "trance"
version = "2026.6.10-1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Windows screensaver manager"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"



[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]

windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
]}
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "app-trance"
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/release/trance", "usr/bin/trance", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/trance.png", "644"],
    ["packaging/desktop/trance.desktop", "usr/share/applications/trance.desktop", "644"],
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo
